fix: small fix for image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h1>Anastasiya Chultsova</h1>
 		</div>
 		<div class="cvphoto">
-			
+            <img src="photo.JPG" alt="Photo for CV">	
 		</div>
 	</header>
 	<section>
